--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "displayName": "80s-pastel",
     "description": "A colorful tribute to the 80's <3",
     "version": "0.0.1",
-	"publisher": "Maku Maku",
+	"publisher": "makuke1234",
     "engines": {
         "vscode": "^1.62.0"
     },
